--- a/paginas/inicio.html
+++ b/paginas/inicio.html
@@ -6,44 +6,23 @@
     <div>
         <div class="card-panel">
             <article>
-                <header style="text-align: center">
-                    <p class="flow-text"><strong>Por que estudar os Estados Unidos?</strong></p>
-                </header>
-                <section style="text-align: justify">
-                    <p class="flow-text">Os Estados Unidos da América é um país que exerce influência em todo o planeta, por ser a <strong>maior potência do mundo</strong>. Você já ouviu falar sobre a NASA, Coca-Cola, Apple, Microsoft, Google, Facebook ou Amazon? Sabe o país de origem destas empresas? Isso mesmo, todas nasceram nos Estados Unidos da América. Ficou curioso em conhecer um pouco mais sobre esse país? Então junte-se a Colombozinho e embarque nessa aventura conosco.</p>
-                </section>
-                <footer>
-                    <blockquote>
-                        Esta WebQuest foi desenvolvida para faixa etária de 13 a 14 anos.
-                    </blockquote>
+                <main style="text-align: justify">
+                    <p>
+                        Os Estados Unidos da América é um país que exerce influência em todo o planeta,
+                        por ser a <strong>maior potência do mundo</strong>. Você já ouviu falar sobre a <em>NASA, Coca-Cola,
+                        Apple, Microsoft, Google, Facebook</em> ou <em>Amazon</em>? Sabe o país de origem destas empresas?
+                        Isso mesmo, todas nasceram nos EUA (Estados Unidos da América). Ficou curioso em conhecer um pouco mais
+                        sobre esse país? Então junte-se a Colombinho e embarque nessa aventura conosco.
+                        <blockquote>
+                            Esta WebQuest foi desenvolvida para faixa etária de 13 a 14 anos.
+                        </blockquote>
+                    </p>
+                </main>
+                <footer style="text-align: center">
+                    <div class="divider"></div><br>
+                    <a class="waves-effect waves-light btn blue" href="?p=introducao">Começar jornada</a>
                 </footer>
             </article>
-        </div>
-    </div>
-
-    <div style="margin-top: 5%">
-        <div class="card-panel">
-            <div class="row">
-                <div class="col s6">
-                    <p class="flow-text"><strong>Contato</strong></p>
-                    formulário ...
-                </div>
-                <div class="col s6">
-                    <article>
-                        <header>
-                            <p class="flow-text"><strong>Autores</strong></p>
-                        </header>
-                        <section>
-                            <a class="flow-text">Luciene Santos</a><br>
-                            <a>Acadêmica de Licenciatura em Computação</a>
-                        </section>
-                        <section>
-                            <a class="flow-text">Felipe V. Sobral</a><br>
-                            <a>Acadêmico de Licenciatura em Computação</a>
-                        </section>
-                    </article>
-                </div>
-            </div>
         </div>
     </div>
 
