--- a/paginas/introducao.html
+++ b/paginas/introducao.html
@@ -6,17 +6,25 @@
         <div class="card-panel">
             <article>
                 <header style="text-align: center">
-                    <p class="flow-text"><strong>Introdução da aventura!</strong></p>
+                    <h5>Introdução da aventura!</h5>
                 </header>
-                <section style="text-align: justify">
-                    <p class="flow-text">Olá, me chamo Colombozinho. Gosto muito de  ler e conhecer a história dos países. Amo viajar e investigar coisas novas sobre os lugares que visito. Quer me ajudar a descobrir um pouco sobre a história dos Estados Unidos da América?</p>
-                    <p class="flow-text">Preciso de ajuda para investigar e aprofundar meus conhecimentos sobre esse poderoso país. Desafio você e seus colegas a turistar em nossa WebQuest. Ficaria muito grato se contasse com os auxílios de vocês nesta aventura.</p>
-                </section>
-                <section style="text-align: center">
-                    <hr>
-                    <p class="flow-text"><strong>Aventureiro, está pronto para viajarmos?</strong> Se sim, clique no botão abaixo!</p>
-                    <a class="waves-effect waves-light btn-large pulse" href="?p=tarefa"><i class="material-icons left">local_airport</i>Embarcar</a>
-                </section>
+                <main style="text-align: justify">
+                    <p>
+                        Olá, me chamo Colombinho. Gosto muito de  ler e conhecer a história dos países.
+                        Amo viajar e investigar coisas novas sobre os lugares que visito. 
+                        Quer me ajudar a descobrir um pouco sobre a história dos Estados Unidos da América?
+                    </p>
+                    <p>
+                        Preciso de ajuda para investigar e aprofundar meus conhecimentos sobre esse
+                        poderoso país. Desafio você e seus colegas a turistar em nossa WebQuest.
+                        Ficaria muito grato se contasse com os auxílios de vocês nesta aventura.
+                    </p>
+                </main>
+                <footer style="text-align: center">
+                    <div class="divider"></div>
+                    <p><strong>Aventureiro, está pronto para viajarmos?</strong> Se sim, clique no botão abaixo!</p>
+                    <a class="waves-effect waves-light btn pulse blue" href="?p=tarefa"><i class="material-icons left">local_airport</i>Embarcar</a>
+                </footer>
             </article>
         </div>
     </div>
