--- a/paginas/tarefa.html
+++ b/paginas/tarefa.html
@@ -6,20 +6,20 @@
         <div class="card-panel">
             <article>
                 <header style="text-align: center">
-                    <p class="flow-text"><strong>O que iremos fazer?</strong></p>
+                    <h5>O que iremos fazer?</h5>
                 </header>
-                <section style="text-align: justify">
-                    <p class="flow-text">
-                        Podemos começar conhecendo a formação e o expansionismo territorial dos EUA (Estados Unidos da América).
-                        Logo após, podemos pesquisar sobre seu potêncial econômico,
+                <main style="text-align: justify">
+                    <p>
+                        Podemos começar conhecendo a formação e o expansionismo territorial dos EUA.
+                        Logo após, podemos pesquisar sobre seu potêncial econômico.
                         Por fim, iremos turistar e conhecer sua população e suas <a class="link" href="https://pt.wikipedia.org/wiki/Megal%C3%B3pole" target="_BLANK">megalópoles</a>.
                     </p>
-                </section>
-                <section style="text-align: center">
-                    <hr>
-                    <p class="flow-text"><strong>Está pronto para começarmos?</strong></p>
-                    <a class="waves-effect waves-light btn-large pulse green" href="?p=tarefa"><i class="material-icons left">check</i>SIM!</a>
-                </section>
+                </main>
+                <footer style="text-align: center">
+                    <div class="divider"></div>
+                    <p><strong>Está pronto para começarmos?</strong></p>
+                    <a class="waves-effect waves-light btn pulse green" href="?p=tarefa"><i class="material-icons left">check</i>SIM!</a>
+                </footer>
             </article>
         </div>
     </div>
