--- a/paginas/inicio.html
+++ b/paginas/inicio.html
@@ -3,10 +3,11 @@
     <div style="text-align: center; margin-top: 5%">
         <img src="imagens/colombozinho/2.svg" style="width: 150px">
     </div>
-    <div>
+    <div style="margin-top: 3%">
         <div class="card-panel">
             <article>
                 <main style="text-align: justify">
+                    <p style="text-align: center"><a href="https://www.todamateria.com.br/bandeira-dos-estados-unidos/" target="_BLANK"><img src="imagens/bandeira.svg" style="width: 25%; min-width: 200px"/></a></p>
                     <p>
                         Os Estados Unidos da América é um país que exerce influência em todo o planeta,
                         por ser a <strong>maior potência do mundo</strong>. Você já ouviu falar sobre a <em>NASA, Coca-Cola,
