--- a/paginas/introducao.html
+++ b/paginas/introducao.html
@@ -2,7 +2,7 @@
     <div style="text-align: center; margin-top: 5%">
         <img src="imagens/colombozinho/3.svg" style="width: 150px">
     </div>
-    <div>
+    <div style="margin-top: 3%">
         <div class="card-panel">
             <article>
                 <header style="text-align: center">
