--- a/paginas/tarefa.html
+++ b/paginas/tarefa.html
@@ -2,7 +2,7 @@
     <div style="text-align: center; margin-top: 5%">
         <img src="imagens/colombozinho/4.svg" style="width: 100px">
     </div>
-    <div>
+    <div style="margin-top: 3%">
         <div class="card-panel">
             <article>
                 <header style="text-align: center">
@@ -18,7 +18,7 @@
                 <footer style="text-align: center">
                     <div class="divider"></div>
                     <p><strong>Está pronto para começarmos?</strong></p>
-                    <a class="waves-effect waves-light btn pulse green" href="?p=tarefa"><i class="material-icons left">check</i>SIM!</a>
+                    <a class="waves-effect waves-light btn pulse green" href="?p=etapa1"><i class="material-icons left">check</i>SIM!</a>
                 </footer>
             </article>
         </div>
