--- a/paginas/processos/e1.html
+++ b/paginas/processos/e1.html
@@ -10,19 +10,13 @@
                 </header>
                 <main style="text-align: justify">
                     <blockquote style="border-left: 5px solid #009cff">
-                        <p>Junte-se a três colegas e em seguida, atribua um nome à sua equipe de exploradores.</p>
+                        <p>Para começarmos nossa aventura, junte-se a três colegas para formar seu grupo de explores!</p>
                     </blockquote>
                 </main>
-                <section>
-                    <div class="input-field">
-                        <input id="equipe" type="text">
-                        <label class="active" for="equipe">Nome da equipe</label>
-                    </div>
-                </section>
                 <footer style="text-align: center">
                     <div class="divider"></div>
-                    <p><strong>Está pronto para começarmos?</strong></p>
-                    <a class="waves-effect waves-light btn pulse green" href="?p=tarefa"><i class="material-icons left">check</i>SIM!</a>
+                    <p><strong>Que tal analisarmos alguns materiais agora?</strong></p>
+                    <a class="waves-effect waves-light btn pulse blue" href="?p=etapa2">VAMOS LÁ!</a>
                 </footer>
             </article>
         </div>
