--- a/paginas/processos/e2.html
+++ b/paginas/processos/e2.html
@@ -40,14 +40,21 @@
 
                     </div>
 
+                    <p>Para aprofundar o conhecimento da equipe, vocês poderão navegar e explorar os seguintes links:</p>
+                    <ol>
+                        <li><a class="link" href="https://www.coladaweb.com/geografia/formacao-territorial-eua" target="_blank">Formação Territorial dos Estados Unidos</a></li>
+                        <li><a class="link" href="https://suapesquisa.com/historia/formacao_territorial_eua.htm" target="_blank">Formação Territorial dos Estados Unidos (Resumido)</a></li>
+                        <li><a class="link" href="https://pt.wikipedia.org/wiki/Evolu%C3%A7%C3%A3o_territorial_dos_Estados_Unidos" target="_blank">Evolução territorial dos Estados Unidos</a></li>
+                        <li><a class="link" href="https://alunosonline.uol.com.br/historia/eua-marcha-para-oeste.html" target="_blank">EUA e a Marcha para o Oeste</a></li>
+                        <li><a class="link" href="https://www.historiadomundo.com.br/idade-contemporanea/marcha-para-oeste.htm" target="_blank">O que foi a marcha para o oeste nos EUA?</a></li>
+                        <li><a class="link" href="https://www.todamateria.com.br/as-treze-colonias-e-a-formacao-dos-estados-unidos/" target="_blank">As Treze Colônias e a Formação dos Estados Unidos</a></li>
+                    </ol>
                 
-                    
-
                 </main>
                 <footer style="text-align: center">
                     <div class="divider"></div>
-                    <p><strong>Que tal analisarmos alguns materiais agora?</strong></p>
-                    <a class="waves-effect waves-light btn pulse blue" href="?p=etapa2">VAMOS LÁ!</a>
+                    <p><strong>Bora colocar a mão na massa! Vamos pintar um mapa para que colombinho possa conhecer o território dos EUA.</strong></p>
+                    <a class="waves-effect waves-light btn pulse blue" href="?p=etapa3">PRÓXIMA ETAPA</a>
                 </footer>
             </article>
         </div>
