--- a/paginas/conclusao.html
+++ b/paginas/conclusao.html
@@ -11,7 +11,7 @@
                         <h5>Obrigado por participar desta WebQuest!</h5>
                     </div>
                     <p>
-                        Parabénsss, ao longo desta WebQuest você e seus amigos aprenderam sobre os Estados Unidos de uma maneira diferente, 
+                        Parabéns, ao longo desta WebQuest você e seus amigos aprenderam sobre os Estados Unidos de uma maneira diferente, 
                         viajando em uma grande aventura e ajudando Colombinho, nosso personagem!
                     </p>
 
