--- a/paginas/processos/e2.html
+++ b/paginas/processos/e2.html
@@ -54,7 +54,7 @@
                 <footer style="text-align: center">
                     <div class="divider"></div>
                     <p><strong>Bora colocar a mão na massa! Vamos pintar um mapa para que colombinho possa conhecer o território dos EUA.</strong></p>
-                    <a class="waves-effect waves-light btn pulse blue" href="?p=etapa3">PRÓXIMA ETAPA</a>
+                    <a class="waves-effect waves-light btn blue" href="?p=etapa3">PRÓXIMA ETAPA</a>
                 </footer>
             </article>
         </div>
