--- a/paginas/processos/e3.html
+++ b/paginas/processos/e3.html
@@ -16,7 +16,7 @@
                         <blockquote>
                             <strong>
                                 Pinte cada colônia com uma cor diferente e legende cada cor com os nomes das colônias.
-                                É muito importante você salvar o mapa para utilizá-lo quando for apresentar para colombinho!
+                                É muito importante você salvar o mapa para utilizá-lo quando for apresentar para Colombinho!
                             </strong>
                         </blockquote>
 
@@ -28,7 +28,7 @@
                         
                         <div class="divider"></div>
 
-                        <p style="text-align: center"><a class="waves-effect waves-light btn pulse green" href="https://mapchart.net/usa.html" target="_BLANK">ABRIR MAPA PARA PINTAR</a></p>
+                        <p style="text-align: center"><a class="waves-effect waves-light btn green" href="https://mapchart.net/usa.html" target="_BLANK">ABRIR MAPA PARA PINTAR</a></p>
                         
                         <blockquote>
                             Está com dificuldades em utilizar o site? O vídeo abaixo mostra direitinho como pintar o mapa e como colocar as legendas!
@@ -42,7 +42,7 @@
                     <footer style="text-align: center">
                         <div class="divider"></div>
                         <p><strong>Já terminou? Bom, daqui para frente as etapas serão mais desafiadoras! Tome cuidado, e vamos prosseguir, viajantes.</strong></p>
-                        <a class="waves-effect waves-light btn pulse blue" href="?p=etapa4">PRÓXIMA ETAPA</a>
+                        <a class="waves-effect waves-light btn blue" href="?p=etapa4">PRÓXIMA ETAPA</a>
                     </footer>
                 </article>
             </div>
