--- a/paginas/processos/e4.html
+++ b/paginas/processos/e4.html
@@ -10,13 +10,13 @@
                 </header>
                 <main style="text-align: justify">
                     
-                    <p>Nossa jornada ainda não acabou! Ganhamos conhecimento sobre a formação e expansionismo territorial dos EUA. Colombinho ficará muito orgulhoso de nós!</p>
+                    <p>Nossa jornada ainda não acabou! Ganhamos conhecimento sobre a formação e expansionismo territorial dos EUA.</p>
                     <p>Agora, iremos ajudar Colombinho explorar a <strong>economia</strong> dos EUA.</p>
                 </main>
                 <footer style="text-align: center">
                     <div class="divider"></div>
                     <p><strong>Espero que vocês não tenham medo de grandes desafios! Vocês são corajosos? Desejam mesmo continhar?</strong></p>
-                    <a class="waves-effect waves-light btn pulse green" href="?p=etapa5">SIMMMM!</a>
+                    <a class="waves-effect waves-light btn green" href="?p=etapa5">SIMMMM!</a>
                 </footer>
             </article>
         </div>
