--- a/paginas/processos/e5.html
+++ b/paginas/processos/e5.html
@@ -81,8 +81,8 @@
                 </main>
                 <footer style="text-align: center">
                     <div class="divider"></div>
-                    <p><strong>E aí? Gostaram de saber mais sobre a economia dos EUA? Colombinho irá ficar muito feliz em saber que vocês se empenharam!</strong></p>
-                    <a class="waves-effect waves-light btn pulse blue" href="?p=etapa6">MANDA UM DESAFIO AÍ</a>
+                    <p><strong>E aí? Gostaram de saber mais sobre a economia dos EUA? Colombinho conta com o apoio de vocês!</strong></p>
+                    <a class="waves-effect waves-light btn blue" href="?p=etapa6">MANDA UM DESAFIO AÍ</a>
                 </footer>
             </article>
         </div>
