--- a/paginas/processos/e7.html
+++ b/paginas/processos/e7.html
@@ -16,7 +16,7 @@
                 <footer style="text-align: center">
                     <div class="divider"></div>
                     <p><strong>Vamos nessa?</strong></p>
-                    <a class="waves-effect waves-light btn pulse green" href="?p=etapa8">CLARO!</a>
+                    <a class="waves-effect waves-light btn green" href="?p=etapa8">CLARO!</a>
                 </footer>
             </article>
         </div>
