--- a/paginas/processos/e8.html
+++ b/paginas/processos/e8.html
@@ -7,7 +7,7 @@
             <article>
                 <header style="text-align: center">
                     <h5>Vamos buscar informações!</h5>
-                    <p>O conteúdo desta página irá servir para você conhecer um pouco mais sobre a economia dos EUA e, o porquê dele ser a maior potência do mundo.</p>
+                    <p>O conteúdo desta página irá servir para você conhecer um pouco mais sobre a população dos EUA.</p>
                 </header>
                 <main style="text-align: justify">  
 
@@ -40,7 +40,7 @@
                 <footer style="text-align: center">
                     <div class="divider"></div>
                     <p><strong>O que achou do conteúdo? Fico feliz por vocês terem chegado aqui! Prontos para próxima etapa?</strong></p>
-                    <a class="waves-effect waves-light btn pulse blue" href="?p=etapa9">PRÓXIMA ETAPA</a>
+                    <a class="waves-effect waves-light btn blue" href="?p=etapa9">PRÓXIMA ETAPA</a>
                 </footer>
             </article>
         </div>
