--- a/paginas/processos/e9.html
+++ b/paginas/processos/e9.html
@@ -26,7 +26,7 @@
                 <footer style="text-align: center">
                     <div class="divider"></div>
                     <p><strong>Ufa, conseguimos! Vamos para a etapa final e último desafio!</strong></p>
-                    <a class="waves-effect waves-light btn pulse green" href="?p=avaliacao">IR NESSA</a>
+                    <a class="waves-effect waves-light btn green" href="?p=avaliacao">IR NESSA</a>
                 </footer>
             </article>
         </div>
