--- a/paginas/recursos.html
+++ b/paginas/recursos.html
@@ -21,6 +21,10 @@
                                     <li><a class="link" href="https://alunosonline.uol.com.br/historia/eua-marcha-para-oeste.html" target="_blank">EUA e a Marcha para o Oeste</a></li>
                                     <li><a class="link" href="https://www.historiadomundo.com.br/idade-contemporanea/marcha-para-oeste.htm" target="_blank">O que foi a marcha para o oeste nos EUA?</a></li>
                                     <li><a class="link" href="https://www.todamateria.com.br/as-treze-colonias-e-a-formacao-dos-estados-unidos/" target="_blank">As Treze Colônias e a Formação dos Estados Unidos</a></li>
+                                    <li><a class="link" href="https://www.youtube.com/watch?v=CL-caaURuSM" target="_blank">FORMAÇÃO DOS ESTADOS UNIDOS | GEOGRAFIA | DESCOMPLICA</a></li>
+                                    <li><a class="link" href="https://www.youtube.com/watch?v=kKnfZT91TTc" target="_blank">Geografia - EUA (Estados Unidos da América)</a></li>
+                                    <li><a class="link" href="https://www.youtube.com/watch?v=aZp6wbf6SRY" target="_blank">EUA no Século XIX</a></li>
+                                    <li><a class="link" href="https://www.youtube.com/watch?v=1FG5b86w5VY" target="_blank">12 Fatos Estranhos Sobre A Geografia Dos Estados Unidos Que Nunca Te Contaram</a></li>
                                 </ol>
                             </div>
                         </li>
@@ -34,6 +38,14 @@
                                     <li><a class="link" href="https://guiadoestudante.abril.com.br/estudo/estados-unidos-resumo/" target="_blank">Estados Unidos – resumo</a></li>
                                     <li><a class="link" href="http://www.ahistoria.com.br/estados-unidos-superpotencia/" target="_blank">História dos Estados Unidos (Superpotência)</a></li>
                                     <li><a class="link" href="https://www.suapesquisa.com/paises/eua/economia_estados_unidos.htm" target="_blank">Economia dos Estados Unidos (resumo)</a></li>
+                                    <li><a class="link" href="https://www.youtube.com/watch?v=kKnfZT91TTc" target="_blank">Geografia - EUA (Estados Unidos da América)</a></li>
+                                    <li><a class="link" href="https://www.youtube.com/watch?v=6zkW0c7YJmo" target="_blank">Como o EUA se tornou a maior potência mundial</a></li>
+                                    <li><a class="link" href="https://www.youtube.com/watch?v=o_OLIRZ9Mx0" target="_blank">Por que os EUA interferem tanto no mundo?</a></li>
+                                    <li><a class="link" href="https://www.youtube.com/watch?v=Rg52RSjWnWw" target="_blank">Industrialização dos EUA</a></li>
+                                    <li><a class="link" href="https://www.youtube.com/watch?v=GN_prKNAj7Q" target="_blank">As atividades industriais nos Estados Unidos</a></li>
+                                    <li><a class="link" href="https://www.youtube.com/watch?v=7KDcju8Jop4" target="_blank">Agricultura nos EUA</a></li>
+                                    <li><a class="link" href="https://www.youtube.com/watch?v=fwCU2sg6G1w" target="_blank">Os Estados Unidos da América: Economia</a></li>
+                                    <li><a class="link" href="https://www.youtube.com/watch?v=fU1PwpMG_NA" target="_blank">Setores primário, secundário e terciário da economia</a></li>
                                 </ol>
                             </div>
                         </li>
@@ -47,6 +59,8 @@
                                     <li><a class="link" href="https://pt.wikipedia.org/wiki/Demografia_dos_Estados_Unidos" target="_blank">Demografia dos Estados Unidos</a></li>
                                     <li><a class="link" href="http://www.geografia.seed.pr.gov.br/modules/galeria/detalhe.php?foto=399&evento=5" target="_blank">Estados Unidos da América: População</a></li>
                                     <li><a class="link" href="https://www.ceicdata.com/pt/indicator/united-states/population" target="_blank">Estados Unidos População</a></li>
+                                    <li><a class="link" href="https://www.youtube.com/watch?v=rbP2ErYkTJ4" target="_blank">Estados Unidos População</a></li>
+                                    <li><a class="link" href="https://www.youtube.com/watch?v=uSAqO7XVpXY" target="_blank">As 10 maiores cidades dos Estados Unidos</a></li>
                                 </ol>
                             </div>
                         </li>
@@ -54,10 +68,10 @@
                             <div class="collapsible-header active"><em>Google Slides</em></div>
                             <div class="collapsible-body">
                                 <ol>
-                                    <li><a class="link" href="https://www.youtube.com/watch?v=5Ezo0-pF09g" target="_blank">Vídeo 1</a></li>
-                                    <li><a class="link" href="https://www.youtube.com/watch?v=QFar20uG8Hc" target="_blank">Vídeo 2</a></li>
-                                    <li><a class="link" href="https://www.youtube.com/watch?v=zdHHbK2V5HA" target="_blank">Vídeo 3</a></li>
-                                    <li><a class="link" href="https://www.youtube.com/watch?v=gXlExWtCv5Y" target="_blank">Vídeo 4</a></li>
+                                    <li><a class="link" href="https://www.youtube.com/watch?v=5Ezo0-pF09g" target="_blank">COMO USAR GOOGLE APRESENTAÇÕES</a></li>
+                                    <li><a class="link" href="https://www.youtube.com/watch?v=QFar20uG8Hc" target="_blank">Melhorando seus slides | Apresentações</a></li>
+                                    <li><a class="link" href="https://www.youtube.com/watch?v=zdHHbK2V5HA" target="_blank">Como Fazer Slides Pelo Google Drive</a></li>
+                                    <li><a class="link" href="https://www.youtube.com/watch?v=gXlExWtCv5Y" target="_blank">Como criar SLIDES ESCOLARES usando o celular</a></li>
                                 </ol>
                             </div>
                         </li>
