--- a/paginas/tarefa.html
+++ b/paginas/tarefa.html
@@ -18,7 +18,7 @@
                 <footer style="text-align: center">
                     <div class="divider"></div>
                     <p><strong>Está pronto para começarmos?</strong></p>
-                    <a class="waves-effect waves-light btn pulse green" href="?p=etapa1"><i class="material-icons left">check</i>SIM!</a>
+                    <a class="waves-effect waves-light btn green" href="?p=etapa1"><i class="material-icons left">check</i>SIM!</a>
                 </footer>
             </article>
         </div>
