--- a/paginas/processos/e1.html
+++ b/paginas/processos/e1.html
@@ -15,8 +15,8 @@
                 </main>
                 <footer style="text-align: center">
                     <div class="divider"></div>
-                    <p><strong>Que tal analisarmos alguns materiais agora?</strong></p>
-                    <a class="waves-effect waves-light btn pulse blue" href="?p=etapa2">VAMOS LÁ!</a>
+                    <p><strong>Que tal analisarmos alguns materiais?</strong></p>
+                    <a class="waves-effect waves-light btn blue" href="?p=etapa2">VAMOS LÁ!</a>
                 </footer>
             </article>
         </div>
