--- a/paginas/avaliacao.html
+++ b/paginas/avaliacao.html
@@ -33,12 +33,16 @@
 
                         <div class="row valign-wrapper criterio">
                             <div class="col s12 m2">
-                                <a class="btn-floating btn-large waves-effect waves-light green">10</a>
+                                <a class="btn-floating btn-large waves-effect waves-light green">30</a>
                             </div>
                             <div class="col s12 m10">
-                                <p><strong>Trabalho em equipe</strong></p>
-                                <p style="text-align: justify">Será avaliado se todos os colegas do grupo contribuiram
-                                   para a elaboração e apresentação dos slides.</p>
+                                <p><strong>Trabalho individual</strong></p>
+                                <p style="text-align: justify">Será avaliado se o aluno adquiriu o conhecimento durante as atividades.</p>
+                                <ol>
+                                    <li>Formação e expansionismo territorial</li>
+                                    <li>Potência econômica</li>
+                                    <li>População e megalópoles</li>
+                                </ol>
                             </div>
                         </div>
                         <div class="row valign-wrapper criterio">
@@ -46,29 +50,13 @@
                                 <a class="btn-floating btn-large waves-effect waves-light green">30</a>
                             </div>
                             <div class="col s12 m10">
-                                <p><strong>Conhecimento Adquirido</strong></p>
-                                <p style="text-align: justify">Será analisado se houve entendimento sobre o conteúdo estudado.</p>
+                                <p><strong>Trabalhos desenvolvidos</strong></p>
+                                <p style="text-align: justify">Os exploradores entregaram todas atividades propostas?</p>
                             </div>
                         </div>
                         <div class="row valign-wrapper criterio">
                             <div class="col s12 m2">
-                                <a class="btn-floating btn-large waves-effect waves-light green">30</a>
-                            </div>
-                            <div class="col s12 m10">
-                                <p><strong>Conteúdo</strong></p>
-                                <div style="text-align: justify">
-                                    <p>Será analisado a coêrencia do conteúdo.</p>
-                                    <ol>
-                                        <li>Formação e expansionismo territorial</li>
-                                        <li>Potência econômica</li>
-                                        <li>População e megalópoles</li>
-                                    </ol>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row valign-wrapper criterio">
-                            <div class="col s12 m2">
-                                <a class="btn-floating btn-large waves-effect waves-light green">30</a>
+                                <a class="btn-floating btn-large waves-effect waves-light green">40</a>
                             </div>
                             <div class="col s12 m10">
                                 <p><strong>Apresentação de Slides</strong></p>
